<resources>
    <string name="app_name">Resources Scrollview We part</string>
    <string name="enter_the_name_hint">Enter the Name</string>
    <string name="enter_the_id_hint">Enter the ID</string>
    <string name="enter_date_of_birth_hint">Enter Date of Birth</string>
    <string name="enter_the_bloog_group_hint">Enter the bloog group</string>
    <string name="enter_the_phone_number_hint">Enter the Phone Number</string>
    <string name="enter_the_state_hint">Enter the State</string>
    <string name="enter_the_district_hint">Enter the District</string>
    <string name="enter_the_address_hint">Enter the Address</string>
</resources>