<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
   <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/enter_the_name_hint"
        android:background="@drawable/rectangle"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/enter_the_id_hint"
        android:background="@drawable/rectangle"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/enter_date_of_birth_hint"
        android:background="@drawable/rectangle"
        android:padding="30dp"
        android:layout_marginTop="30dp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_bloog_group_hint"
            android:background="@drawable/rectangle"
            android:padding="30dp"
            android:layout_marginTop="30dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/enter_the_phone_number_hint"
            android:background="@drawable/rectangle"
            android:padding="30dp"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/enter_the_state_hint"
            android:background="@drawable/rectangle"
            android:padding="30dp"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/enter_the_district_hint"
            android:background="@drawable/rectangle"
            android:padding="30dp"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/enter_the_address_hint"
            android:background="@drawable/rectangle"
            android:padding="30dp"
            android:layout_marginTop="30dp"
            />


</LinearLayout>

</ScrollView>